# catasyn

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-build.sh  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: does-nothing-yet.yml
catasyn/: __init__.py  helpers.py  settings.py
catasyn/domain/: model.py
catasyn/entrypoints/: app.py  flask_app.py  multi.sh  scheduler.py
catasyn/service_layer/: scheduler.py  sync_main.py  synchroniser.py
tests/: conftest.py  pytest.ini  pytest.ini.example  test_sync.py  test_synchroniser.py
