[tool.poetry]
name = "catasyn"
version = "0.1.0"
description = "Simple Catalogue (schema, topic, consumer, metadata) Synchronisation"
authors = ["Antonio <antonio.one@pm.me>"]
license = "TBC"
readme = "README.md"
homepage = "https://github.com/antonio-one/catasyn"
repository = "https://github.com/antonio-one/catasyn"
keywords = ["python", "flask", "data", "synchronisation", "api", "pubsub", "bigquery", "beam"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.10"
Flask = "^1.1.2"
Flask-API = "^2.0"
python-decouple = "^3.4"
schedule = "^1.0.0"
datcat = "^0.1.3"
google-auth = "^1.34.0"
google-cloud-pubsub = "^2.4.0"
google-cloud-bigquery = "^2.13.1"
uvicorn = "^0.13.4"
fastapi = "^0.63.0"


[tool.poetry.dev-dependencies]
pre-commit = "^2.10.0"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-env = "^0.6.2"
black = "^20.8b1"
isort = "^5.7.0"
flake8 = "^3.8.4"

[tool.isort]
profile = "black"

[tool.poetry.scripts]
scheduler = "catasyn.entrypoints.scheduler:main"
app = "catasyn.entrypoints.flask_app:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"